# app/Models/CashCategory.php
@@ -1,0 +1,12 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Attributes\Fillable;
+use Illuminate\Database\Eloquent\Model;
+
+#[Fillable(['designation', 'description', 'type', 'status', 'addedBy'])]
+class CashCategory extends Model
+{
+    //
+}
